- Linux package coverage added to package adapter:
- `.deb` now parses deterministic AR entry metadata (bounded, no extraction/exec).
- `.rpm` now captures deterministic lead/header/script/signing hint counters from local bytes only.
- `.appimage` now captures deterministic ELF/runtime header hints (analysis-only; execution withheld).
- Package strict route now requires minimum structural byte-size evidence for `.rpm` beyond lead/header marker bytes, preventing tiny synthetic placeholders from passing explicit package routing.
- Package strict route now fails closed on partial ZIP/AR metadata even when required structure markers are present, preventing mixed valid/corrupt package acceptance.
- Archive/package tar coverage expanded:
- `.tar.xz/.txz` now follow explicit tar-plugin, fail-closed handling in archive/package lanes.
- Explicit `.tar` archive analysis now validates header checksum and octal size fields and fails closed on partial metadata even when earlier entries parsed, preventing mixed valid/corrupt tar acceptance.
- Explicit `.zip` archive analysis now validates central-directory integrity in strict route and fails closed on partial metadata even when earlier entries parsed, preventing mixed valid/corrupt ZIP acceptance.
- macOS installer coverage added to package adapter:
- `.pkg` now captures deterministic XAR header and script/permission hint counters.
- `.dmg` now captures deterministic trailer marker hints (`koly`) without mounting.
- Package strict route now requires minimum structural byte-size evidence for `.pkg` and `.dmg` beyond valid header/trailer markers, preventing tiny synthetic placeholders from passing explicit package routing.
- Document adapter deepened for `.docm/.xlsm`:
- ZIP structure + relationships are inspected deterministically for macro/embed/external-link indicators.